Fixes a lot of fatal errors (#27)

--- a/conf/config.example.json
+++ b/conf/config.example.json
@@ -1,5 +1,6 @@
 {
     "secret_key" : "YOUR SECRET KEY GOES HERE",
     "allowed_channels" : [],
-    "command_prefix" : "!!"
+    "command_prefix" : "!!",
+    "permissions_file" : "auth.json"
 }
