--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "dependencies": {
     "discord.js": "^10.0.1",
-    "node-opus": "^0.2.2"
+    "node-opus": "^0.2.2",
+    "prompt": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
