Implements the dice roll command (#53)
* Implements the dice roll command

Implements the dice roll command by utilizing the node-dice-js npm module. Closes #46

* Added dependency

* Utilize command and global refactor

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "main.js",
   "dependencies": {
     "discord.js": "^10.0.1",
+    "node-dice-js": "^0.1.2",
     "node-opus": "^0.2.2",
     "prompt": "^1.0.0"
   },
